# City-Zen

./: .gitignore  README.md  pyproject.toml
notebooks/: City_Zen_CDMX_Crime_Centroids_By_CP.ipynb  City_Zen_CDMX_Crime_Heatmap.ipynb
src/city_zen_crime_map/: __init__.py  pipeline.py
